# zk-graph-view

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
graph_view/: cli.py
src/zk_graph_view/: api.py  cli.py  graph.py
src/zk_graph_view/graph/: __init__.py  _graph_shared.py  interactive_graph.py  static_graph.py
zk_graph_view/: cli.py
