[project]
name = "zk-graph-view"
version = "0.1.0"
description = "Visualize zk graphs using python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pyvis",
  "colorir",
  "networkx",
  "matplotlib",
  "numpy",
  "typing",
  "scipy",
  "halo",
]

[project.scripts]
zk-graph-view = "zk_graph_view.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
