[project]
name = "zk-graph-view"
version = "0.1.3"
description = "Visualize zk graphs in an HTML file"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pyvis",
  "colorir",
  "typing",
]

[project.scripts]
zk-graph-view = "zk_graph_view.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
